--- a/project_when2sleep/index.html
+++ b/project_when2sleep/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="https://static-00.iconduck.com/assets.00/moon-icon-2048x2048-707lsx2m.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>When2Sleep</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+
+
   </body>
 </html>
